--- a/DiseInter/tarea5/style.css
+++ b/DiseInter/tarea5/style.css
@@ -1,19 +1,23 @@
 body {
     margin: 0;
+    font-family: "Segoe UI", Arial;
+    color: rgb(240,246,252);
 }
 
 header {
     display: flex;
     align-items: center;
     justify-content: space-between;
-    border: 1px solid black;
     margin: 0;
+    background-color: rgb(13, 17, 23);
+    border: 1px solid rgb(48, 54, 61);
 }
 
 .cabecera {
     display: flex;
     justify-content: space-between;
     align-items: center;
+    
 }
 
 select {
@@ -29,12 +33,18 @@ svg {
     display: flex;
     width: 100%;
     justify-content: space-between;
+    background-color: rgb(13, 17, 23);
 }
 
 aside {
-    height: 900px;
+    height: 100vh;
     width: 15%;
     border-right: 1px solid black;
+}
+
+#izquierda{
+    background-color: rgb(22, 27, 34);
+    border: 1px solid rgb(48, 54, 61);
 }
 
 #nuevos {
@@ -57,7 +67,11 @@ ul {
 main {
     width: 40%;
 }
-
+section{
+    background-color: rgb(22, 27, 34);
+    border: 1px solid rgb(48, 54, 61);
+    padding: 10px;
+}
 #derecha {
     width: 30%;
 }
@@ -73,15 +87,18 @@ main {
 
 footer {
     position: absolute;
-    bottom: 3%;
+    top: 100%;
     left: 30%;
 
 }
 
 .bordeado {
-    border: 1px solid black;
+    padding: 10px;
+    border: 1px solid rgb(48, 54, 61);
+    background-color: rgb(22, 27, 34);
 }
 .bordeado div{
     border-bottom: 1px solid black;
+    padding-top: 1rem;
     width: 100%;
 }
