--- a/DiseInter/proyecto_matias_pennino/web/style.css
+++ b/DiseInter/proyecto_matias_pennino/web/style.css
@@ -112,9 +112,59 @@ main div {
 
 }
 
-main, nav{
+#subMain1 {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    width: 100%;
+    flex-wrap: wrap;
+}
+
+#subMain1 div {
+    width: 50%;
+    height: 50%;
+}
+
+#productos {
+    display: flex;
+    justify-content: space-evenly;
+}
+
+#productos div {
+    width: 20%;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-evenly;
+    align-items: center;
+    background-color: var(--colorResaltado);
+    border-radius: 10px;
+}
+
+#productos div img {
+    width: 50%;
+}
+
+.descProducto{
+    display: none;
+}
+
+#servicios {
+    
+}
+
+#empresas {
+   
+}
+
+#destacado {
+    
+}
+
+main,
+nav {
     font-family: Arial;
 }
+
 footer {
     display: flex;
     height: 10%;
@@ -122,7 +172,8 @@ footer {
     justify-content: space-around;
 
 }
-#subFoo1{
+
+#subFoo1 {
     color: var(--colorResaltado);
 }
 
