--- a/DiseInter/proyecto_matias_pennino/web/style.css
+++ b/DiseInter/proyecto_matias_pennino/web/style.css
@@ -141,15 +141,21 @@ main div {
 }
 
 #productos div img {
-    width: 50%;
+    width: 70%;
+    height: 70%;
 }
 
 .descProducto{
     display: none;
 }
 
-#servicios {
-    
+table, th, td{
+    border: 1px solid black;
+}
+table{
+    border-collapse: collapse;
+    margin-top: 20px;
+    margin-right: 10px;
 }
 
 #empresas {
