--- a/DiseInter/proyecto_matias_pennino/web/style.css
+++ b/DiseInter/proyecto_matias_pennino/web/style.css
@@ -17,7 +17,16 @@ body {
     color: var(--colorLetras);
     display: flex;
     gap: .5%;
+    overflow: hidden;
+    justify-content: space-between;
     flex-direction: column;
+    font-size: 1vw;
+    margin: 0;
+}
+
+h2,
+th {
+    color: var(--colorResaltado);
 }
 
 header,
@@ -54,7 +63,7 @@ main {
 
 header {
     display: flex;
-    height: 20%;
+    height: 10%;
     width: 100%;
     justify-content: space-evenly;
     align-items: center;
@@ -103,7 +112,7 @@ a {
 }
 
 main {
-    height: 70%;
+    height: 72%;
     flex-direction: column;
 
 }
@@ -118,8 +127,9 @@ main div {
     display: flex;
     align-items: center;
     justify-content: center;
-    width: 100%;
+    width: 90%;
     flex-wrap: wrap;
+    height: 70%;
 }
 
 #subMain1 div {
@@ -147,31 +157,36 @@ main div {
     height: 70%;
 }
 
-.descProducto{
+.descProducto {
     display: none;
 }
 
-table, th, td{
+table,
+th,
+td {
     border: 1px solid black;
 }
-table{
+
+table {
     border-collapse: collapse;
-    margin-top: 20px;
-    margin-right: 10px;
+    width: 100%;
+    height: 80%;
 }
 
-tr:nth-of-type(even){
+tr:nth-of-type(even) {
     background-color: var(--fondoPar);
 }
-tr:nth-of-type(odd){
+
+tr:nth-of-type(odd) {
     background-color: var(--fondoImpar);
 }
 
 #empresas {
-   display: flex;
-   justify-content: space-evenly;
+    display: flex;
+    justify-content: space-evenly;
 }
-#empresas div{
+
+#empresas div {
     width: 20%;
     height: 80%;
     display: flex;
@@ -181,20 +196,52 @@ tr:nth-of-type(odd){
     background-color: var(--fondoImpar);
     border-radius: 10px;
 }
-#empresas div img{
+
+#empresas div img {
     width: 50%;
-    height: 40%;
+    height: 30%;
 }
 
-#destacado{
+#destacado {
     display: flex;
     flex-direction: column;
     justify-content: space-evenly;
     align-items: center;
 }
-#destacado img{
+
+#destacado img {
     width: 20%;
     height: 40%;
+}
+
+#subMain2 {
+    height: 30%;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+}
+
+#subMain2 div {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 90%;
+    height: 60%;
+ 
+}
+#columna{
+    display: flex;
+    align-items: start;
+    justify-content: start;
+}
+#columna p {
+    display: inline-block;
+    padding: 5px;
+}
+
+#subMain2 div img {
+    width: 25%;
+    height: 90%;
 }
 
 main,
@@ -204,14 +251,48 @@ nav {
 
 footer {
     display: flex;
-    height: 10%;
+    height: 13%;
+    width: 100%;
     align-items: center;
     justify-content: space-around;
+}
 
+footer div {
+    width: 33%;
 }
 
 #subFoo1 {
-    color: var(--colorResaltado);
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    height: 100%;
+}
+
+#subFoo1 p {
+    margin: 0;
+}
+
+#subFoo1 div {
+    width: 70%;
+}
+
+#subFoo2 {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+#subFoo3 {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 100%;
+}
+
+#subFoo3 img {
+    width: 30%;
+    height: 80%;
 }
 
 ul {
@@ -220,4 +301,76 @@ ul {
 
 img {
     border-radius: 20px;
+}
+
+@media (width < 620px) {
+    body {
+        font-size: 2vw;
+    }
+
+    #subHead3 {
+        display: none;
+    }
+
+    header div {
+        width: 33%;
+    }
+
+    nav {
+        font-size: 2vw;
+    }
+
+    #servicios,
+    #empresas,
+    #subFoo1,
+    #subFoo3 {
+        display: none;
+    }
+
+    #subMain1 div {
+        width: 100%;
+    }
+
+    #subMain1 {
+        height: 60%;
+    }
+    #subMain2 {
+        height: 40%;
+    }
+
+    #pasta {
+        display: none !important;
+    }
+
+    #productos {
+        flex-direction: column;
+        height: 50%;
+    }
+
+    #productos div {
+        width: 30%;
+        height: 30%;
+    }
+    #destacado{
+        width: 100%;
+        height: 100%;
+    }
+    #destacado img{
+        width: 50%;
+        height: 100%;
+    }
+    #subMain2 h2{
+        width: 60%;
+    }
+    #subMain2 div p {
+        display: flex;
+        height: 50%;
+        width: 100%;
+    }
+    #columna{
+        flex-direction: column;
+    }
+    #segunda{
+        display: none;
+    }
 }
