--- a/DiseInter/tarea1_unidad3/vistas/inicio.css
+++ b/DiseInter/tarea1_unidad3/vistas/inicio.css
@@ -1,25 +1,47 @@
-main{
+main {
     display: grid;
     grid-template-areas: "bueno malo"
-    "premio premio"
-    "form form";
-    grid-template-columns: 1fr 1fr;
-    grid-template-rows: 1fr 1fr 1fr;
+        "premio form";
+    grid-template-columns: 50% 50%;
+    grid-template-rows: 50% 50%;
+    overflow-y: scroll;
+    justify-items: center;
+
 }
 
-#semana{
+#bueno {
     grid-area: bueno;
 }
-#malo{
+
+#malo {
     grid-area: malo;
 }
-#postre{
+
+#postre {
     grid-area: premio;
 }
-#comentarios{
-    grid-area: form;
+
+#bueno,
+#malo,
+#postre {
+    width: 80%;
+    height: 100%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
 }
-#formulario{
+
+#comentarios {
+
+    grid-area: form;
+    width: 100%;
+    height: 100%;
+    padding-bottom: 35px;
+
+}
+
+#formulario {
     display: flex;
     flex-wrap: wrap;
     gap: 10px;
@@ -27,9 +49,30 @@ main{
     justify-content: space-evenly;
     align-items: center;
 }
-#formulario label{
-    width: 50%;
+
+#formulario label {
+    width: 40%;
 }
-button{
-    width: 45%;
+
+button {
+    width: 20%;
+}
+
+img {
+    width: 20%;
+    height: 50%;
+}
+
+#bueno:hover h3,
+#malo:hover h3,
+#postre:hover h3 {
+    display: none;
+}
+
+#bueno:hover img,
+#malo:hover img,
+#postre:hover img {
+    height: 90%;
+    width: 70%;
+    transition: .5s;
 }
