--- a/DiseInter/Pennino_Matias_Tarea_1_U3/estilos/layout.css
+++ b/DiseInter/Pennino_Matias_Tarea_1_U3/estilos/layout.css
@@ -18,6 +18,13 @@ body {
     font-size: 1.5vw;
 }
 
+header, footer{
+    background-color: #7A3F00;
+}
+aside{
+    background-color: #BE6200;
+}
+
 header {
     grid-area: cab;
 }
@@ -61,6 +68,7 @@ main {
     border: 1px solid black;
     border-bottom: none;
     border-right: none;
+    background-color: #E87800;
 }
 
 footer {
