--- a/DiseInter/tarea_bootstrap/estilos/contacto.css
+++ b/DiseInter/tarea_bootstrap/estilos/contacto.css
@@ -5,6 +5,7 @@ body{
     flex-direction: column;
     height: 90vh;
     background-color: rgb(129, 45, 45);
+    font-weight: 800;
 }
 form{
     width: 60%;
